add starter kit

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -3,13 +3,23 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Adalab Web Starter Kit</title>
+    <title>Evaluación final módulo 1</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="./assets/css/main.css" />
     <link rel="icon" href="./assets/images/favicon.png" />
   </head>
 
   <body>
-    
+    <header class="header">
+      <div class="menu">
+        <a href="https://adalab.es/">
+          <img
+            src="./assets/images/ico-menu.svg"
+            alt="menu"
+            title="menu"
+        /></a>
+      </div>
+    </header>
+
   </body>
 </html>
