add header and hero

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -20,6 +20,12 @@
         /></a>
       </div>
     </header>
+    <section class="hero">
+      <h1 class="h1">anonimous proxy</h1>
+      <p class="text">In hac habitasse platea dictumst</p>
+      <a class="scrolldown" href="./index.html#threereasons"><img src="../images/ico-scroll-down.svg" alt="press to know reasons" title="go to reasons"></a>
+    </section>
+    
 
   </body>
 </html>
