add sections looking n reasons

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -23,9 +23,32 @@
     <section class="hero">
       <h1 class="h1">anonimous proxy</h1>
       <p class="text">In hac habitasse platea dictumst</p>
-      <a class="scrolldown" href="./index.html#threereasons"><img src="../images/ico-scroll-down.svg" alt="press to know reasons" title="go to reasons"></a>
+      <a class="scrolldown" href="./index.html#threereasons"><img src="./assets/images/ico-scroll-down.svg" alt="press to know reasons" title="go to reasons"></a>
     </section>
-    
+    <section class="lookingwindow">
+      <p>insomnia tips</p>
+      <h3>looking through a window</h3>
+      <p>Donec accumsan, nulla ut volutpat porttitor, quam odio tempus fells, at luctus ex diam nec lectus. Vuvamus semper sodales rutrum</p>
+      <button class="buttongo" type="button">go</button>
+    </section>
+    <section class="threereasons">
+      <h3 class="h3">3 reasons to purchase</h3>
+      <div class="reason1">
+        <h4>Ut sed metus</h4>
+        <p>Lorem ipsum dolor sit amet, consecteur</p>
+      </div>
+      <div class="reason2">
+        <h4>Curabitur ac erat</h4>
+        <p>Mauris mattis urna quis lorem molestie</p>
+      </div>
+      <div class="reason3">
+        <h4>Morbi dictum</h4>
+        <p>Aliquam in dolor et dolor tincidunt</p>
+      </div>
+      <button class="buttonmore" type="morereasons">more reasons</button>
+
+    </section>
+
 
   </body>
 </html>
