--- a/src/html/index.html
+++ b/src/html/index.html
@@ -46,9 +46,23 @@
         <p>Aliquam in dolor et dolor tincidunt</p>
       </div>
       <button class="buttonmore" type="morereasons">more reasons</button>
-
     </section>
+    <footer>
+      <a class="scrolldown" href="./index.html#threereasons"><img src="./assets/images/ico-arrow.svg" alt="press to know reasons" title="go to reasons"></a>
+      <p class="copy">copy 2022 we <i>corazón</i> components</p>
+      <ul class="list">
+        <li>articles</li>
+        <li>books</li>
+        <li>events</li>
+        <li>reasons</li>
+        <li>tips</li>
+      </ul>
+      <ul class="list">
+        <li>twitter</li>
+        <li>instagram</li>
+        <li>mastodon social</li>
+      </ul>
 
-
+    </footer>
   </body>
 </html>
