add styles section two

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -21,16 +21,15 @@
       </div>
     </header>
     <section id="hero" class="hero">
-      <img class="hero_img" src="./assets/images/cover.jpeg" alt="hero img" title="building">
       <h1 class="hero__h1">anonimous proxy</h1>
       <p class="hero__text">In hac habitasse platea dictumst</p>
       <a class="hero__scrolldown" href="./index.html#threereasons"><img src="./assets/images/ico-scroll-down.svg" alt="press to know reasons" title="go to reasons"></a>
     </section>
     <section class="lookingwindow">
-      <p>insomnia tips</p>
-      <h3>looking through a window</h3>
-      <p>Donec accumsan, nulla ut volutpat porttitor, quam odio tempus fells, at luctus ex diam nec lectus. Vuvamus semper sodales rutrum</p>
-      <button class="buttongo" type="button">go</button>
+      <p class="lookingwindow__littlep">insomnia tips</p>
+      <h3 class="lookingwindow__h3">looking through a window</h3>
+      <p class="lookingwindow__p">Donec accumsan, nulla ut volutpat porttitor, quam odio tempus fells, at luctus ex diam nec lectus. Vuvamus semper sodales rutrum</p>
+      <button class="lookingwindow__buttongo" type="button">go</button>
     </section>
     <section id="threereasons" class="threereasons">
       <h3 class="h3">3 reasons to purchase</h3>
