add styles section 3

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Evaluación final módulo 1</title>
-    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet" />
-    <link rel="stylesheet" href="./assets/css/main.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./assets/css/main.css">
     
   </head>
 
@@ -29,39 +29,44 @@
       <p class="lookingwindow__littlep">insomnia tips</p>
       <h3 class="lookingwindow__h3">looking through a window</h3>
       <p class="lookingwindow__p">Donec accumsan, nulla ut volutpat porttitor, quam odio tempus fells, at luctus ex diam nec lectus. Vuvamus semper sodales rutrum</p>
-      <button class="lookingwindow__buttongo" type="button">go</button>
+      <a class="lookingwindow__buttongo" href="">Go</a>
     </section>
     <section id="threereasons" class="threereasons">
-      <h3 class="h3">3 reasons to purchase</h3>
-      <div class="reason1">
+      <h3 class="threereasons__h3">3 reasons to purchase</h3>
+      <div class="threereasons__reason1">
         <h4>Ut sed metus</h4>
         <p>Lorem ipsum dolor sit amet, consecteur</p>
       </div>
-      <div class="reason2">
+      <div class="threereasons__reason2">
         <h4>Curabitur ac erat</h4>
         <p>Mauris mattis urna quis lorem molestie</p>
       </div>
-      <div class="reason3">
-        <h4>Morbi dictum</h4>
-        <p>Aliquam in dolor et dolor tincidunt</p>
+      <div class="threereasons__reason3">
+        <h4 class="threereasons__reason3--h4">Morbi dictum</h4>
+        <p class="threereasons__reason3--p">Aliquam in dolor et dolor tincidunt</p>
       </div>
-      <button class="buttonmore" type="morereasons">more reasons</button>
+      <a class="threereasons__buttonmore" href="">More reasons</a>
     </section>
     <footer class="footer">
       <a class="scrollup" href="./index.html#hero"><img src="./assets/images/ico-arrow.svg" alt="go to start" title="go to start"></a>
       <p class="copy">copy 2022 we <i>corazón</i> components</p>
-      <ul class="footer__list">
-        <li>articles</li>
-        <li>books</li>
-        <li>events</li>
-        <li>reasons</li>
-        <li>tips</li>
-      </ul>
-      <ul class="footer__list">
-        <li>twitter</li>
-        <li>instagram</li>
-        <li>mastodon social</li>
-      </ul>
+      
+      <nav class="footer__nav1">
+        <ul class="footer__nav1--ul1">
+           <li>articles</li>
+           <li>books</li>
+           <li>events</li>
+           <li>reasons</li>
+           <li>tips</li>
+        </ul>
+      </nav>
+      <nav class="footer__nav2">
+        <ul class="footer__nav2--ul2">
+          <li>twitter</li>
+          <li>instagram</li>
+          <li>mastodon social</li>
+       </ul>
+      <nav>
 
     </footer>
   </body>
