add styles footer

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -35,40 +35,66 @@
     </section>
     <section id="threereasons" class="threereasons">
       <h3 class="threereasons__h3">3 reasons to purchase</h3>
-      <div class="threereasons__reason1">
-        <h4>Ut sed metus</h4>
-        <p>Lorem ipsum dolor sit amet, consecteur</p>
-      </div>
-      <div class="threereasons__reason2">
-        <h4>Curabitur ac erat</h4>
-        <p>Mauris mattis urna quis lorem molestie</p>
-      </div>
-      <div class="threereasons__reason3">
-        <h4 class="threereasons__reason3--h4">Morbi dictum</h4>
-        <p class="threereasons__reason3--p">Aliquam in dolor et dolor tincidunt</p>
-      </div>
+      <article class="threereasons__reason">
+        <h4 class="threereasons__reason--h4">Ut sed metus</h4>
+        <p class="threereasons__reason--p">Lorem ipsum dolor sit amet, consecteur</p>
+      </article>
+      <article class="threereasons__reason">
+        <h4 class="threereasons__reason--h4">Curabitur ac erat</h4>
+        <p class="threereasons__reason--p">Mauris mattis urna quis lorem molestie</p>
+      </article>
+      <article class="threereasons__reason">
+        <h4 class="threereasons__reason--h4">Morbi dictum</h4>
+        <p class="threereasons__reason--p">Aliquam in dolor et dolor tincidunt</p>
+      </article>
+      <div class="buttonmore container">
       <a class="threereasons__buttonmore" href="">More reasons</a>
+      </div>
     </section>
     <footer class="footer">
+
       <a class="scrollup" href="./index.html#hero"><img src="./assets/images/ico-arrow.svg" alt="go to start" title="go to start"></a>
-      <p class="copy">copy 2022 we <i>corazón</i> components</p>
-      
+            
       <nav class="footer__nav1">
         <ul class="footer__nav1--ul1">
-           <li>articles</li>
-           <li>books</li>
-           <li>events</li>
-           <li>reasons</li>
-           <li>tips</li>
+           <li class="item">
+            <a href="https://adalab.es/" class="nav-items">articles</a>
+          </li>
+          <li class="item">
+            <a href="https://adalab.es/" class="nav-items">books</a>
+          </li>
+          <li class="item">
+            <a href="https://adalab.es/" class="nav-items">events</a>
+          </li>
+          <li class="item">
+            <a href="https://adalab.es/" class="nav-items">reasons</a>
+          </li>
+          <li class="item">
+            <a href="https://adalab.es/" class="nav-items">tips</a>
+          </li>               
         </ul>
+
       </nav>
       <nav class="footer__nav2">
         <ul class="footer__nav2--ul2">
-          <li>twitter</li>
-          <li>instagram</li>
-          <li>mastodon social</li>
-       </ul>
+          <li class="item">
+            <a href="https://adalab.es/" class="nav-items">articles</a>
+          </li>
+          <li class="item">
+            <a href="https://adalab.es/" class="nav-items">books</a>
+          </li>
+          <li class="item">
+            <a href="https://adalab.es/" class="nav-items">events</a>
+          </li>
+          <li class="item">
+            <a href="https://adalab.es/" class="nav-items">reasons</a>
+          </li>       
+       </ul>      
       <nav>
+      <div class="love components">
+        <p class="copy">&copy; 2022</p> 
+        <p class="components"> we &#128147 components</p>
+      </div>
 
     </footer>
   </body>
