add style button

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -31,7 +31,7 @@
       <p class="lookingwindow__littlep">insomnia tips</p>
       <h3 class="lookingwindow__h3">looking through a window</h3>
       <p class="lookingwindow__p">Donec accumsan, nulla ut volutpat porttitor, quam odio tempus fells, at luctus ex diam nec lectus. Vuvamus semper sodales rutrum</p>
-      <a class="lookingwindow__buttongo" href="">Go</a>
+      <a class="lookingwindow__buttongo" href="https://adalab.es/" target="_blank">Go</a>
     </section>
     <section id="threereasons" class="threereasons">
       <h3 class="threereasons__h3">3 reasons to purchase</h3>
@@ -53,24 +53,23 @@
     </section>
     <footer class="footer">
 
-      <a class="scrollup" href="./index.html#hero"><img src="./assets/images/ico-arrow.svg" alt="go to start" title="go to start"></a>
-            
+      <a class="scrollup" href="./index.html#hero"><img src="./assets/images/ico-arrow.svg" alt="go to start" title="go to start"></a>           
       <nav class="footer__nav1">
         <ul class="footer__nav1--ul1">
            <li class="item">
-            <a href="https://adalab.es/" class="nav-items">articles</a>
+            <a href="https://adalab.es/" target="blank" class="nav-items">articles</a>
           </li>
           <li class="item">
-            <a href="https://adalab.es/" class="nav-items">books</a>
+            <a href="https://adalab.es/" target="blank" class="nav-items">books</a>
           </li>
           <li class="item">
-            <a href="https://adalab.es/" class="nav-items">events</a>
+            <a href="https://adalab.es/" target="blank" class="nav-items">events</a>
           </li>
           <li class="item">
-            <a href="https://adalab.es/" class="nav-items">reasons</a>
+            <a href="https://adalab.es/" target="blank" class="nav-items">reasons</a>
           </li>
           <li class="item">
-            <a href="https://adalab.es/" class="nav-items">tips</a>
+            <a href="https://adalab.es/" target="blank" class="nav-items">tips</a>
           </li>               
         </ul>
 
@@ -78,24 +77,25 @@
       <nav class="footer__nav2">
         <ul class="footer__nav2--ul2">
           <li class="item">
-            <a href="https://adalab.es/" class="nav-items">articles</a>
+            <a href="https://adalab.es/" target="blank" class="nav-items">articles</a>
           </li>
           <li class="item">
-            <a href="https://adalab.es/" class="nav-items">books</a>
+            <a href="https://adalab.es/" target="blank" class="nav-items">books</a>
           </li>
           <li class="item">
-            <a href="https://adalab.es/" class="nav-items">events</a>
+            <a href="https://adalab.es/" target="blank"  class="nav-items">events</a>
           </li>
           <li class="item">
-            <a href="https://adalab.es/" class="nav-items">reasons</a>
+            <a href="https://adalab.es/" target="blank"  class="nav-items">reasons</a>
           </li>       
        </ul>      
       <nav>
-      <div class="love components">
+      <div class="lovecomponents">
         <p class="copy">&copy; 2022</p> 
         <p class="components"> we &#128147 components</p>
       </div>
 
     </footer>
+    
   </body>
 </html>
