--- a/src/html/index.html
+++ b/src/html/index.html
@@ -48,7 +48,7 @@
         <p class="threereasons__reason--p">Aliquam in dolor et dolor tincidunt</p>
       </article>
       <div class="buttonmore container">
-      <a class="threereasons__buttonmore" href="">More reasons</a>
+      <a class="threereasons__buttonmore" href="https://adalab.es/">More reasons</a>
       </div>
     </section>
     <footer class="footer">
@@ -77,17 +77,14 @@
       <nav class="footer__nav2">
         <ul class="footer__nav2--ul2">
           <li class="item">
-            <a href="https://adalab.es/" target="blank" class="nav-items">articles</a>
+            <a href="https://adalab.es/" target="blank" class="nav-items">twitter</a>
           </li>
           <li class="item">
-            <a href="https://adalab.es/" target="blank" class="nav-items">books</a>
+            <a href="https://adalab.es/" target="blank" class="nav-items">instagram</a>
           </li>
           <li class="item">
-            <a href="https://adalab.es/" target="blank"  class="nav-items">events</a>
-          </li>
-          <li class="item">
-            <a href="https://adalab.es/" target="blank"  class="nav-items">reasons</a>
-          </li>       
+            <a href="https://adalab.es/" target="blank"  class="nav-items">mastodon social</a>
+          </li>    
        </ul>      
       <nav>
       <div class="lovecomponents">
