--- a/src/html/index.html
+++ b/src/html/index.html
@@ -86,11 +86,11 @@
             <a href="https://adalab.es/" target="blank"  class="nav-items">mastodon social</a>
           </li>    
        </ul>      
-      <nav>
-      <div class="lovecomponents">
+      </nav>
+      <nav class="lovecomponents">
         <p class="copy">&copy; 2022</p> 
         <p class="components"> we &#128147 components</p>
-      </div>
+      </nav>
 
     </footer>
     
