--- a/src/html/index.html
+++ b/src/html/index.html
@@ -8,10 +8,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Roboto+Slab:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/main.css">
-    
   </head>
 
   <body>
+
     <header class="header">
       <div class="header__menu">
         <a href="https://adalab.es/" target="_blank">
@@ -22,37 +22,42 @@
         /></a>
       </div>
     </header>
-    <section id="hero" class="hero">
-      <h1 class="hero__h1">anonimous proxy</h1>
-      <p class="hero__text">In hac habitasse platea dictumst</p>
-      <a class="hero__scrolldown" href="./index.html#threereasons"><img src="./assets/images/ico-scroll-down.svg" alt="press to know reasons" title="go to reasons"></a>
-    </section>
-    <section class="lookingwindow">
-      <p class="lookingwindow__littlep">insomnia tips</p>
-      <h3 class="lookingwindow__h3">looking through a window</h3>
-      <p class="lookingwindow__p">Donec accumsan, nulla ut volutpat porttitor, quam odio tempus fells, at luctus ex diam nec lectus. Vuvamus semper sodales rutrum</p>
-      <a class="lookingwindow__buttongo" href="https://adalab.es/" target="_blank">Go</a>
-    </section>
-    <section id="threereasons" class="threereasons">
-      <h3 class="threereasons__h3">3 reasons to purchase</h3>
-      <article class="threereasons__reason">
-        <h4 class="threereasons__reason--h4">Ut sed metus</h4>
-        <p class="threereasons__reason--p">Lorem ipsum dolor sit amet, consecteur</p>
-      </article>
-      <article class="threereasons__reason">
-        <h4 class="threereasons__reason--h4">Curabitur ac erat</h4>
-        <p class="threereasons__reason--p">Mauris mattis urna quis lorem molestie</p>
-      </article>
-      <article class="threereasons__reason">
-        <h4 class="threereasons__reason--h4">Morbi dictum</h4>
-        <p class="threereasons__reason--p">Aliquam in dolor et dolor tincidunt</p>
-      </article>
-      <div class="buttonmore container">
-      <a class="threereasons__buttonmore" href="https://adalab.es/">More reasons</a>
-      </div>
-    </section>
-    <footer class="footer">
 
+    <main>
+      <section id="hero" class="hero">
+        <h1 class="hero__h1">anonimous proxy</h1>
+        <p class="hero__text">In hac habitasse platea dictumst</p>
+        <a class="hero__scrolldown" href="./index.html#threereasons"><img src="./assets/images/ico-scroll-down.svg" alt="press to know reasons" title="go to reasons"></a>
+      </section>
+
+      <section class="lookingwindow">
+        <p class="lookingwindow__littlep">insomnia tips</p>
+        <h3 class="lookingwindow__h3">looking through a window</h3>
+        <p class="lookingwindow__p">Donec accumsan, nulla ut volutpat porttitor, quam odio tempus fells, at luctus ex diam nec lectus. Vuvamus semper sodales rutrum</p>
+        <a class="lookingwindow__buttongo" href="https://adalab.es/" target="_blank">Go</a>
+      </section>
+
+      <section id="threereasons" class="threereasons">
+        <h3 class="threereasons__h3">3 reasons to purchase</h3>
+        <article class="threereasons__reason">
+          <h4 class="threereasons__reason--h4">Ut sed metus</h4>
+          <p class="threereasons__reason--p">Lorem ipsum dolor sit amet, consecteur</p>
+        </article>
+        <article class="threereasons__reason">
+          <h4 class="threereasons__reason--h4">Curabitur ac erat</h4>
+          <p class="threereasons__reason--p">Mauris mattis urna quis lorem molestie</p>
+        </article>
+        <article class="threereasons__reason">
+          <h4 class="threereasons__reason--h4">Morbi dictum</h4>
+          <p class="threereasons__reason--p">Aliquam in dolor et dolor tincidunt</p>
+        </article>
+        <div class="threereasons__container">
+        <a class="threereasons__container--buttonmore" href="https://adalab.es/">More reasons</a>
+        </div>
+      </section>
+    </main>
+
+    <footer class="footer">
       <a class="scrollup" href="./index.html#hero"><img src="./assets/images/ico-arrow.svg" alt="go to start" title="go to start"></a>           
       <nav class="footer__nav1">
         <ul class="footer__nav1--ul1">
@@ -72,7 +77,6 @@
             <a href="https://adalab.es/" target="blank" class="nav-items">tips</a>
           </li>               
         </ul>
-
       </nav>
       <nav class="footer__nav2">
         <ul class="footer__nav2--ul2">
